--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_menu"
-        android:background="?android:attr/windowBackgroundFallback">
+        android:background="@color/common_google_signin_btn_text_dark_pressed">
 
     </FrameLayout>
 
