--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -13,6 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="3dp"
         android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
         android:gravity="bottom"
         android:orientation="vertical">
@@ -22,30 +23,21 @@
             android:layout_height="35dp">
 
             <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:text="@string/title"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:text="@string/datey"
-                android:textSize="13sp"
-                android:textStyle="bold" />
-
-            <TextView
                 android:id="@+id/circle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5" />
+                android:layout_weight="0.3" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1.3"
+                android:gravity="left"
+                android:text="@string/title"
+                android:textColor="#463939"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -57,28 +49,26 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/arthor"
+                android:id="@+id/date"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_weight="0.3"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="0.7"
                 android:gravity="left"
-                android:text="@string/arthor" />
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:text="@string/descriptions" />
+                android:text="@string/datey"
+                android:textColor="#5d98ab"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/state"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:text="@string/tat" />
+                android:layout_weight="0.6"
+                android:text="@string/tat"
+                android:textAlignment="center"
+                android:textColor="#463939"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
