--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -100,6 +100,15 @@
                 android:textSize="16sp"
                 tools:text="Téléphone : " />
 
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="0"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                android:text="Localisation : " />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
