--- a/app/src/main/res/layout-land/change_event_item_land.xml
+++ b/app/src/main/res/layout-land/change_event_item_land.xml
@@ -82,7 +82,7 @@
                     android:id="@+id/prenom_input"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/pernom" />
+                    android:hint="@string/nom" />
 
             </android.support.design.widget.TextInputLayout>
 
