--- a/app/src/main/res/layout/declaration_activity.xml
+++ b/app/src/main/res/layout/declaration_activity.xml
@@ -79,24 +79,10 @@
                 android:layout_weight="1">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/nom_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/nom"
-                    android:inputType="text" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
-
-                <android.support.design.widget.TextInputEditText
                     android:id="@+id/prenom_input"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/pernom" />
+                    android:hint="@string/nom" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
