--- a/app/src/main/res/layout-land/event_item_land.xml
+++ b/app/src/main/res/layout-land/event_item_land.xml
@@ -88,6 +88,24 @@
                 android:textSize="16sp"
                 tools:text="Téléphone : " />
 
+            <TextView
+                android:id="@+id/assignee_view"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Destinataire : " />
+
+            <TextView
+                android:id="@+id/assignee_phone_view"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Tél du destinataire : " />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
