--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -77,7 +77,7 @@
                 android:layout_weight="1"
                 android:textColor="#463939"
                 android:textSize="16sp"
-                tools:text="Prénom : " />
+                tools:text="Reportaire : " />
 
             <TextView
                 android:id="@+id/phone_view"
@@ -86,7 +86,25 @@
                 android:layout_weight="1"
                 android:textColor="#463939"
                 android:textSize="16sp"
-                tools:text="Téléphone : " />
+                tools:text="Tél du reportaire : " />
+
+            <TextView
+                android:id="@+id/assignee_view"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Destinataire : " />
+
+            <TextView
+                android:id="@+id/assignee_phone_view"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:textColor="#463939"
+                android:textSize="16sp"
+                tools:text="Tél du destinataire : " />
 
             <LinearLayout
                 android:layout_width="match_parent"
