--- a/app/src/main/res/layout/declaration_activity.xml
+++ b/app/src/main/res/layout/declaration_activity.xml
@@ -31,6 +31,16 @@
 
             </android.support.v7.widget.Toolbar>
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:layout_weight="0"
+                android:text=" * Informations demandées :"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -50,8 +60,40 @@
                     android:id="@+id/Spinner_category"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_marginRight="100dp"
+                    android:layout_weight="0.5"
                     android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dialog"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="1dp">
+
+                </Spinner>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/border_black"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/urgence"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/hh" />
+
+                <Spinner
+                    android:id="@+id/Spinner_urgence"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="100dp"
+                    android:layout_weight="0.5"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dialog"
                     tools:layout_editor_absoluteX="0dp"
                     tools:layout_editor_absoluteY="1dp">
 
@@ -85,6 +127,15 @@
                     android:hint="@string/nom" />
             </android.support.design.widget.TextInputLayout>
 
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="0"
+                android:text="   Informations optionnelles :"
+                android:textStyle="bold" />
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -98,34 +149,6 @@
                     android:inputType="phone" />
 
             </android.support.design.widget.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/border_black"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/urgence"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="0.5"
-                    android:text="@string/hh" />
-
-                <Spinner
-                    android:id="@+id/Spinner_urgence"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:drawable/btn_dropdown"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="1dp">
-
-                </Spinner>
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
