--- a/app/src/main/res/layout-land/declaration_activity_land.xml
+++ b/app/src/main/res/layout-land/declaration_activity_land.xml
@@ -144,6 +144,20 @@
                     android:hint="@string/t_l_phone"
                     android:inputType="phone" />
 
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/assignee_name_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/destinataire"
+                    android:inputType="text" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/assignee_phone_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/destinataire_telephone"
+                    android:inputType="phone" />
+
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
