--- a/app/src/main/res/layout/change_event_item.xml
+++ b/app/src/main/res/layout/change_event_item.xml
@@ -174,6 +174,20 @@
                 android:layout_weight="0">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/phone_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="@string/t_l_phone"
+                    android:inputType="phone" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0">
+
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/assignee_name_input"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -195,34 +209,6 @@
                     android:hint="@string/destinataire_telephone"
                     android:inputType="phone" />
             </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/phone_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/t_l_phone"
-                android:inputType="phone" />
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/assignee_name_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/destinataire"
-                android:inputType="text" />
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/assignee_phone_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/destinataire_telephone"
-                android:inputType="phone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
